--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,54 +5,46 @@ set(PROJECT_VESRION 0.0.${PATCH_VERSION})
 
 project(Homework_2 VERSION ${PROJECT_VESRION})
 
-##Загружаем гугл тест
+# #Загружаем гугл теѝт
 configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
 execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
   RESULT_VARIABLE result
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download)
+
 if(result)
   message(FATAL_ERROR "CMake step for googletest failed: ${result}")
 endif()
+
 execute_process(COMMAND ${CMAKE_COMMAND} --build .
   RESULT_VARIABLE result
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download)
+
 if(result)
   message(FATAL_ERROR "Build step for googletest failed: ${result}")
 endif()
 
 if(MSVC)
-    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+  set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 endif()
-##загрузили
 
+# #загрузили
 add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
-                 ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
-                 EXCLUDE_FROM_ALL)
+  ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
+  EXCLUDE_FROM_ALL)
 
+configure_file(version.h.in version.h)
 
+add_library(ip_lib src/ip_lib.cpp src/ip_lib.h)
 
-configure_file(version.h.in version.h) 
-add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/src
-${CMAKE_CURRENT_BINARY_DIR}/src/lib
-                 EXCLUDE_FROM_ALL)
-
-
-add_library(ip_lib IP_lib.cpp)
-
-add_executable(main ip_filter.cpp)
+add_executable(main src/ip_filter.cpp)
 
 set_target_properties(main ip_lib PROPERTIES
-    CXX_STANDARD 17
-    CXX_STANDARD_REQUIRED ON
+  CXX_STANDARD 17
+  CXX_STANDARD_REQUIRED ON
 )
-target_link_libraries(main ip_lib)
-##
+target_link_libraries(main PRIVATE ip_lib)
 
-
-
-
-
-
+# #
 install(TARGETS main RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
@@ -62,8 +54,8 @@ set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 
 set(CPACK_PACKAGE_CONTACT example@example.com)
-include (CPack)
+include(CPack)
 
 enable_testing()
 
-#add_test(test_version test_version)
+# add_test(test_version test_version)
